<resources>
    <string name="app_name">Megafacebook</string>
    <string name="megafacebook">Добро пожаловать в MegaFacebook</string>
    <string name="authorize">Авторизуйтесь</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="login">Войти</string>
    <string name="have_account">У меня есть аккаунт</string>
    <string name="new_account">Создать новый аккаунт</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="select_user">Выберите пользователя</string>
    <string name="type_message">"Введите сообщение "</string>
    <string name="online">В сети</string>


</resources>