<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_35sdp"
    android:scrollbars="none"
    tools:context=".activities.AuthorizeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/megafacebook"
            android:textColor="@color/base_text"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/authorize"
            android:textColor="@color/second_text"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sing_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/second_text"
            />

        <EditText
            android:id="@+id/sign_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/second_text" />

        <Button
            android:id="@+id/sign_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/edit_text_background"
            android:padding="@dimen/_10sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_11sdp"
            android:text="@string/new_account" />



    </LinearLayout>

</ScrollView>